--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
    
     <title>Linktree</title>
+    <script type="text/javascript">
     (function(l) {
       if (l.search[1] === '/' ) {
         var decoded = l.search.slice(1).split('&').map(function(s) { 
@@ -23,6 +24,7 @@
         );
       }
     }(window.location))
+  </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
